--- a/SteamDataMining/SteamDataMining/SteamDataMining.csproj
+++ b/SteamDataMining/SteamDataMining/SteamDataMining.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataItem.cs" />
+    <Compile Include="Preprocessing.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
