Started working on a SOM, to see if it yields anything

--- a/SteamDataMining/SteamDataMining/SteamDataMining.csproj
+++ b/SteamDataMining/SteamDataMining/SteamDataMining.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataItem.cs" />
+    <Compile Include="Map.cs" />
     <Compile Include="Preprocessing.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
