--- a/SteamDataMining/SteamDataMining/SteamDataMining.csproj
+++ b/SteamDataMining/SteamDataMining/SteamDataMining.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Apriori.cs" />
     <Compile Include="DataItem.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Preprocessing.cs" />
